--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
         "strict": true,
         "esModuleInterop": true,
         "resolveJsonModule": true,
+        "skipLibCheck": true,
         "plugins": [{ "name": "typescript-plugin-css-modules" }]
     },
     "include": ["packages"],
